[package]
name = "base-rates"
version = "0.1.0"
authors = ["Simon Eskildsen <sirup@sirupsen.com>"]
edition = "2018"

[dependencies]
byte-unit = "3.0"
rand = { features = ["small_rng"], version = "0.7.0" }
num-format = "0.4.0"
failure = "*"
page_size = "*"
redis = "*"
clap = "*"
jemallocator = "*"
libc = "*"
regex = "*"

[target.'cfg(target_os = "linux")'.dependencies]
rio = "0.9.2"
